<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:pinview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.dpizarro.pinview.library.PinView
            android:id="@+id/pinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pinview:password="true"
            pinview:split="-"
            pinview:numberCharacters="1"
            pinview:deleteOnClick="false"
            pinview:keyboardMandatory="false"
            pinview:nativePinBox="false"
            pinview:colorSplit="@android:color/darker_gray"
            pinview:colorTextPinBox="@android:color/black"
            pinview:colorTextTitles="@android:color/black"
            pinview:titles="@array/small_titles"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/cbPassword"
                    android:checked="true"
                    android:layout_marginTop="@dimen/main_margin"
                    android:layout_marginBottom="@dimen/main_margin"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:id="@+id/cbDelete"
                    android:checked="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/main_margin"
                    android:layout_marginBottom="@dimen/main_margin"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_box"
                    android:id="@+id/cbCustomBox"
                    android:checked="true"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard"
                    android:id="@+id/cbKeyboard"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:weightSum="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_pin_boxes"
                    android:layout_gravity="center_horizontal"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sbNumberBoxes"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/main_margin"
                    android:layout_marginBottom="@dimen/main_margin"/>

            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/random_values"
                android:id="@+id/btRandomValues"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
